Version 2.02.172 - 
===============================
  Limit maximal size of thin-pool for specific chunk size.
  Print a warning about in-use PVs with no VG using them.
  Disable automatic clearing of PVs that look like in-use orphans.
  Cache format2 flag is now using segment name type field.
  Support storing status flags via segtype name field.
  Stop using '--yes' mode when fsadm runs without terminal.
  Extend validation of filesystems resized by fsadm.
  Enhance lvconvert automatic settings of possible (raid) LV types.
  Allow lvchange to change properties on a thin pool data sub LV.
  Fix lvcreate extent percentage calculation for mirrors.
  Don't reinstate still-missing devices when correcting inconsistent metadata.
  Properly handle subshell return codes in fsadm.
  Disallow cachepool creation with policy cleaner and mode writeback.

Version 2.02.171 - 3rd May 2017
===============================
  Fix memory warnings by using mempools for command definition processing.
  Fix running commands from a script file.
  Add pvcreate prompt when device size doesn't match setphysicalvolumesize.
  lvconvert - preserve region size on raid1 image count changes
  Adjust pvresize/pvcreate messages and prompt if underlying dev size differs.
  raid - sanely handle insufficient space on takeover.
  Fix configure --enable-notify-dbus status message.
  Change configure option name prefix from --enable-lockd to --enable-lvmlockd.
  lvcreate - raise mirror/raid default regionsize to 2MiB
  Add missing configurable prefix to configuration file installation directory.

Version 2.02.170 - 13th April 2017
==================================
  Introduce global/fsadm_executable to make fsadm path configurable.
  Look for limited thin pool metadata size when using 16G metadata.
  Add lvconvert pool creation rule disallowing options with poolmetadata.
  Fix lvconvert when the same LV is incorrectly reused in options.
  Fix lvconvert VG name validation in option values.