@@ -1,5 +1,6 @@
 Version 2.02.172 - 
 ===============================
+  Improve lvcreate --cachepool arg validation.
   Limit maximal size of thin-pool for specific chunk size.
   Print a warning about in-use PVs with no VG using them.
   Disable automatic clearing of PVs that look like in-use orphans.
